--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
 #hero {
@@ -41,8 +46,41 @@
 .hero-content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 40%;
-    width: 55%  ;
-    gap: 2rem;
+    width: 55%;
+    padding: 2rem;
+    gap: 1.5rem;
     z-index: 2;
+    background-color: rgba(216, 216, 216, 0.86);
+    color: black;
+    font-size: 1.4rem;
+}
+
+.hero-content h1 {
+    font-weight: 900;
+}
+
+.cta-button {
+    display: flex; /* Use flexbox */
+    flex-direction: column;
+    justify-content: center; /* Vertically center content */
+    align-items: center; /* Horizontally center content */
+    margin-top: 0.8rem;
+    text-decoration: none;
+    padding: 1.1rem 1.1rem;
+    background-color: #FF6B6B;
+    color: white;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    width: 13rem;
+    height: 3rem;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.cta-button:hover {
+    background-color: #130e0e;
+    transform: scale(1.05);
 }
