--- a/library-style.css
+++ b/library-style.css
@@ -92,6 +92,11 @@ ul, ol, a {
     align-items: center;
 }
 
+.modal h1 {
+    display: flex;
+    justify-content: center;
+}
+
 .modal .modal-content form label {
     font-size: 1.2rem; /* Set font size for labels */
     margin-bottom: 0.5rem; /* Add some space between labels and inputs */
@@ -105,7 +110,7 @@ ul, ol, a {
     font-size: 1rem; /* Set font size for inputs */
 }
 
-/* Close button */
+/* Close button (popup section) */
 
 .close {
     position: absolute;
@@ -189,7 +194,7 @@ body::before {
 #new-book {
     border: none;
     outline: none;
-    font-size: 1.8rem;
+    font-size: 2rem;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -218,16 +223,75 @@ body::before {
     background-color: #000000;
 }
 
+/* Stored books */
+.bookshelf {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(420px, 1fr)); /* Responsive grid layout */
+    gap: 20px; /* Spacing between book cards */
+    padding: 20px; /* Add some padding to the grid */
+}
+
+.book {
+    display: grid;
+    justify-items: center;
+    gap: 0.8rem;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+/* Selectors, styling inputs */
+
+/* Style the second <h3> element within a book card */
+.book h3:nth-child(2) {
+    color: green; /* Change the color as desired */
+    font-style: italic; /* Add other styles as needed */
+}
+
+.book h3:nth-child(3) {
+    color: green; /* Change the color as desired */
+    font-style: italic; /* Add other styles as needed */
+}
+
+
+.book button {
+    max-width: 300px;
+    background-color: #f95959; 
+    color: white;
+    border: none; 
+    border-radius: 5px; 
+    padding: 0.5rem 1rem; 
+    cursor: pointer;
+    font-size: 1rem; 
+    transition: background-color 0.3s ease; 
+    outline: none;
+}
+
+.book button:hover {
+    background-color: #000000; 
+}
+
 @media screen and (max-width: 768px) {
     .intro {
         justify-content: center;
     }
 
     .intro ul {
-        margin-left: 1rem; /* Adjust margin for smaller screens */
+        margin-left: 1rem;
     }
 
     .modal {
-        width: 90%; /* Adjust modal width for smaller screens */
+        width: 90%;
+    }
+}
+
+/* Bookshelf */
+@media screen and (max-width: 768px) {
+    .bookshelf {
+        grid-template-columns: 1fr; /* Single column on smaller screens */
+    }
+    
+    .book {
+        justify-self: center;
     }
 }
